[package]
name = "mylint-rs"
version = "0.1.0"
authors = ["doyoubi <doyoubihgx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"

[lib]
name = "mylint"
path = "src/lib.rs"

[[bin]]
name="mylint"
path="src/main.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
tree-sitter = "0.6.0"
log = "0.4"
env_logger = "0.6.0"
structopt = "0.3"
scan_dir = "0.3.3"
syntect = "3.3.0"
ansi_term = "0.12"
